// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component.Icon should render an icon 1`] = `
<Icon
  baseline={false}
>
  <styled.span>
    <span
      className="sc-bdVaJa dFIrRp"
    >
      <styled.svg
        baseline={false}
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          className="sc-bwzfXH fOBmuM"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          hello
        </svg>
      </styled.svg>
    </span>
  </styled.span>
</Icon>
`;

exports[`Component.Icon should render an icon 2`] = `
<Icon
  baseline={true}
>
  <styled.span>
    <span
      className="sc-bdVaJa dFIrRp"
    >
      <styled.svg
        baseline={true}
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          className="sc-bwzfXH gMjcCw"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          hello
        </svg>
      </styled.svg>
    </span>
  </styled.span>
</Icon>
`;
